# Pittari

./: .dockerignore  .gitignore  .project  Cargo.toml  Dockerfile  Makefile  README.md  Resize-Kun.cabal  bindata.go  bindata_assetfs.go  build.rs  docker-compose.yml  go.mod  go.sum  main.go  pages.go  pdf.go  photo.go  pittari.conf  stack.yaml  users.json
.devcontainer/: devcontainer.json
.github/workflows/: build-on-linux.yml  build-on-mac.yml  build-on-windows.yml
assets/static/: main.css
assets/static/css/: main.css
assets/templates/: create-error.html  index.hbs  index.html  main.html  upload-error.html
crates/pittari-core/: Cargo.toml
crates/pittari-core/src/: lib.rs
crates/pittari-web/: Cargo.toml  build.rs
crates/pittari-web/assets/static/: main.css
crates/pittari-web/assets/templates/: error_create.hbs  error_upload.hbs  index.hbs  main.hbs
crates/pittari-web/src/: main.rs  web.rs
info/: geninfo.sh  info.go
photo/: cache.go  photo.go
sample/: sample.xml
snaplets/heist/templates/: base.tpl  index.tpl
src/: Image.hs  Site.hs  main.rs  pdf.rs  web.rs
src/pdf/: general.rs  jpeg.rs  native.rs
static/: screen.css
