[package]
name = "pittari"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "std", "env-filter", "chrono" ] }
clap = "4.5.35"
axum = { version = "0.8.3", features = ["multipart"] }
ctrlc = "3.4.6"
handlebars = "6.3.2"
#serde = "1.0.214"
serde_json = "1.0.140"
chrono = "0.4.40"
base64 = "0.22.1"
lopdf = "0.36.0"
image = "0.25.6"
flate2 = "1.1.1"

[build-dependencies]
chrono = "0.4.40"
base64 = "0.22.1"
