[package]
name = "pittari"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "std", "env-filter", "chrono" ] }
clap = "4.5.43"
axum = { version = "0.8.4", features = ["multipart"] }
handlebars = "6.3.2"
chrono = "0.4.41"
base64 = "0.22.1"
pdf-writer = "0.13.0"
image = "0.25.6"

[build-dependencies]
chrono = "0.4.41"
base64 = "0.22.1"
